--- a/DawgResolverTest/DawgResolverTest.csproj
+++ b/DawgResolverTest/DawgResolverTest.csproj
@@ -50,9 +50,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DawgResolver\DawgResolver.csproj">
+    <ProjectReference Include="..\DawgResolver\Dawg.Resolver.csproj">
       <Project>{e12bb466-f92a-40dc-b0c7-4ce18ee15eb9}</Project>
-      <Name>DawgResolver</Name>
+      <Name>Dawg.Resolver</Name>
     </ProjectReference>
     <ProjectReference Include="..\Dawg\Dawg.csproj">
       <Project>{95AF0C36-E8CB-422A-9060-ACA73CCD0C36}</Project>
