--- a/DawgResolverTest/Dawg.Resolver.Console.Test.csproj
+++ b/DawgResolverTest/Dawg.Resolver.Console.Test.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E12BB466-F92A-40DC-B0C7-4CE18EE15EB9}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DawgResolver</RootNamespace>
-    <AssemblyName>DawgResolver</AssemblyName>
+    <ProjectGuid>{12237048-0C49-446E-A50A-6B66F0D0802D}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
+    <RootNamespace>Dawg.Resolver.Console.Test</RootNamespace>
+    <AssemblyName>Dawg.Resolver.Console.Test</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -30,11 +32,14 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,24 +48,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\Bag.cs" />
-    <Compile Include="Model\Game.cs" />
-    <Compile Include="DawgResolver.cs" />
-    <Compile Include="Extensions.cs" />
-    <Compile Include="Model\Letter.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Model\Player.cs" />
-    <Compile Include="Model\Tile.cs" />
-    <Compile Include="Model\TileType.cs" />
-    <Compile Include="Model\Word.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources\dico_dawg.txt" />
-    <EmbeddedResource Include="Resources\initial_board.txt" />
+    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DawgResolver\Dawg.Resolver.csproj">
+      <Project>{e12bb466-f92a-40dc-b0c7-4ce18ee15eb9}</Project>
+      <Name>Dawg.Resolver</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Dawg\Dawg.csproj">
-      <Project>{95af0c36-e8cb-422a-9060-aca73ccd0c36}</Project>
+      <Project>{95AF0C36-E8CB-422A-9060-ACA73CCD0C36}</Project>
       <Name>Dawg</Name>
     </ProjectReference>
   </ItemGroup>
