--- a/Dawg.Resolver.Winform.Test/Dawg.Resolver.Winform.Test.csproj
+++ b/Dawg.Resolver.Winform.Test/Dawg.Resolver.Winform.Test.csproj
@@ -49,6 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomGroupBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Form3.cs">
       <SubType>Form</SubType>
     </Compile>
