--- a/Dawg.Resolver.Winform.Test/Dawg.Resolver.Winform.csproj
+++ b/Dawg.Resolver.Winform.Test/Dawg.Resolver.Winform.csproj
@@ -105,6 +105,10 @@
       <Project>{E12BB466-F92A-40DC-B0C7-4CE18EE15EB9}</Project>
       <Name>Dawg.Resolver</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Dawg\Dawg.csproj">
+      <Project>{95AF0C36-E8CB-422A-9060-ACA73CCD0C36}</Project>
+      <Name>Dawg</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
