--- a/Dawg.Resolver.Winform.Test/Dawg.Resolver.Winform.csproj
+++ b/Dawg.Resolver.Winform.Test/Dawg.Resolver.Winform.csproj
@@ -69,6 +69,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TranspTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="WordsFinder.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WordsFinder.Designer.cs">
+      <DependentUpon>WordsFinder.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form3.resx">
       <DependentUpon>Form3.cs</DependentUpon>
     </EmbeddedResource>
@@ -87,6 +96,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="WordsFinder.resx">
+      <DependentUpon>WordsFinder.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
