--- a/Dawg/Dawg.csproj
+++ b/Dawg/Dawg.csproj
@@ -52,6 +52,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources\dico_dawgODS7.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\EN_Collins_dawg.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
