--- a/DawgResolver/Dawg.Resolver.csproj
+++ b/DawgResolver/Dawg.Resolver.csproj
@@ -42,9 +42,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Bag.cs" />
+    <Compile Include="Model\CustomGrid.cs" />
     <Compile Include="Model\Game.cs" />
     <Compile Include="DawgResolver.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="Model\IColor.cs" />
     <Compile Include="Model\Letter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\Player.cs" />
@@ -72,6 +74,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\dico_dawgODS7.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\EN_Collins_dawg.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
