--- a/Dawg.Presenter/Dawg.Presenter.csproj
+++ b/Dawg.Presenter/Dawg.Presenter.csproj
@@ -4,18 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{12237048-0C49-446E-A50A-6B66F0D0802D}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
-    <RootNamespace>Dawg.Resolver.Console.Test</RootNamespace>
-    <AssemblyName>Dawg.Resolver.Console.Test</AssemblyName>
+    <ProjectGuid>{D7956DE8-953B-4A83-85D0-5822D7FB2B81}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>Dawg.Presenter</RootNamespace>
+    <AssemblyName>Dawg.Presenter</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -25,7 +23,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -33,17 +30,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationIcon>Scrabble_letters.ico</ApplicationIcon>
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,24 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="MainPresenter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DawgResolver\Dawg.Resolver.csproj">
+    <ProjectReference Include="..\Dawg.Resolver.Winform.Test\Dawg.Resolver.View.Winform.csproj">
+      <Project>{8da2c29c-dd08-4caf-92af-84012420155a}</Project>
+      <Name>Dawg.Resolver.View.Winform</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DawgResolver\Dawg.Model.csproj">
       <Project>{e12bb466-f92a-40dc-b0c7-4ce18ee15eb9}</Project>
-      <Name>Dawg.Resolver</Name>
+      <Name>Dawg.Model</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Dawg\Dawg.csproj">
-      <Project>{95AF0C36-E8CB-422A-9060-ACA73CCD0C36}</Project>
-      <Name>Dawg</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Scrabble_letters.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
