--- a/DawgResolverTest/Dawg.Resolver.Console.Test.csproj
+++ b/DawgResolverTest/Dawg.Resolver.Console.Test.csproj
@@ -59,6 +59,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Dawg.Resolver.Winform.Test\Dawg.Solver.Winform.csproj">
+      <Project>{8DA2C29C-DD08-4CAF-92AF-84012420155A}</Project>
+      <Name>Dawg.Solver.Winform</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DawgResolver\Dawg.Resolver.csproj">
       <Project>{e12bb466-f92a-40dc-b0c7-4ce18ee15eb9}</Project>
       <Name>Dawg.Resolver</Name>
