--- a/Dawg.Resolver.Winform.Test/Dawg.Solver.Winform.csproj
+++ b/Dawg.Resolver.Winform.Test/Dawg.Solver.Winform.csproj
@@ -53,29 +53,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomGrid.cs" />
-    <Compile Include="CustomGroupBox.cs">
+    <Compile Include="View\CustomGrid.cs" />
+    <Compile Include="View\CustomGroupBox.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="DawgSolver.cs" />
-    <Compile Include="Form3.cs">
+    <Compile Include="Model\DawgSolver.cs" />
+    <Compile Include="Forms\Form3.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form3.Designer.cs">
+    <Compile Include="Forms\Form3.Designer.cs">
       <DependentUpon>Form3.cs</DependentUpon>
     </Compile>
-    <Compile Include="Game.cs" />
-    <Compile Include="MainForm.cs">
+    <Compile Include="Model\Game.cs" />
+    <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
+    <Compile Include="Forms\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormTile.cs">
+    <Compile Include="View\FormTile.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Model\Bag.cs" />
-    <Compile Include="Model\DawgSolver.cs" />
     <Compile Include="Model\IColor.cs" />
     <Compile Include="Model\IExtendedTile.cs" />
     <Compile Include="Model\Letter.cs" />
@@ -84,22 +83,22 @@
     <Compile Include="Model\Word.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TranspTextBox.cs">
+    <Compile Include="View\TranspTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="WordsFinder.cs">
+    <Compile Include="Forms\WordsFinder.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="WordsFinder.Designer.cs">
+    <Compile Include="Forms\WordsFinder.Designer.cs">
       <DependentUpon>WordsFinder.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Form3.resx">
+    <EmbeddedResource Include="Forms\Form3.resx">
       <DependentUpon>Form3.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MainForm.resx">
+    <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormTile.resx">
+    <EmbeddedResource Include="View\FormTile.resx">
       <DependentUpon>FormTile.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -112,7 +111,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="WordsFinder.resx">
+    <EmbeddedResource Include="Forms\WordsFinder.resx">
       <DependentUpon>WordsFinder.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
@@ -150,5 +149,6 @@
       <Version>6.0.0</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
