--- a/Dawg.Resolver.Winform.Test/Dawg.Solver.Winform.csproj
+++ b/Dawg.Resolver.Winform.Test/Dawg.Solver.Winform.csproj
@@ -98,6 +98,9 @@
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\CustomGroupBox.resx">
+      <DependentUpon>CustomGroupBox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\FormTile.resx">
       <DependentUpon>FormTile.cs</DependentUpon>
     </EmbeddedResource>
